# anti-slop-mcp

./: .gitignore  ARCHITECTURE.md  README.md  api_server.py  mcp_server.py  pyproject.toml  requirements.txt  server.py
anti_slop/: __init__.py  ai_tools.py  analyzers.py  base.py  cleaners.py  enums.py  formatters.py  registry.py
